# prompt-injection-cv

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
assets/: job_description.txt
assets/cv-latex/: compile.sh
assets/cv-latex/tex/: alex_smith.fdb_latexmk  alex_smith.fls  alex_smith.tex  alex_smith_extra.fls  alex_smith_extra.tex  avery_taylor.fdb_latexmk  avery_taylor.fls  avery_taylor.tex  avery_taylor_extra.fdb_latexmk  avery_taylor_extra.fls  avery_taylor_extra.tex  example.tex  extra_footer.tex  jane_doe.fdb_latexmk  jane_doe.fls  jane_doe.tex  jane_doe_extra.fdb_latexmk  jane_doe_extra.fls  jane_doe_extra.tex  pubs.bib
notebooks/: inject-pro.ipynb  inject.ipynb  inject_thoughts-pro.ipynb  inject_thoughts.ipynb
prompts/: system_instruction.md  user_instruction.md
src/prompt_injection_cv/: prompter.py  utils.py
